--- a/04-proyecto-seguros/package.json
+++ b/04-proyecto-seguros/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.0.5"
   },
   "devDependencies": {
